...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/posicionFutbolistaTxt"
                app:layout_constraintTop_toBottomOf="@id/posicionFutbolistaTxt"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/venderBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Vender"
                android:textColor="@color/white"
                android:background="@drawable/edittext_rounded_background"
                android:backgroundTint="#B90B0B"
                app:layout_constraintStart_toStartOf="@id/puntosFutbolistaTxt"
                app:layout_constraintTop_toBottomOf="@id/puntosFutbolistaTxt"
                app:layout_constraintEnd_toStartOf="@id/comprarBt"
...
