...
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp" />

    <!-- Nuevos botones para filtrar por posición -->

    <Button
        android:id="@+id/alineacionBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#FFFFFF"
        android:text="Alineación"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/plantillaBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOrdenarPuntos" />

    <Button
        android:id="@+id/plantillaBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#B90B0B"
        android:text="Plantilla"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/alineacionBt"
        app:layout_constraintTop_toBottomOf="@+id/buttonOrdenarPuntos" />

    <Button
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCentrocampista"
        app:layout_constraintTop_toBottomOf="@+id/alineacionBt" />


    <TextView
        android:id="@+id/tvEncimaRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="Cargando plantilla..."
...
